--- a/tidycoral.Rmd
+++ b/tidycoral.Rmd
@@ -85,6 +85,28 @@ buoy <- buoy %>%
 
 ```
 
+```{r}
+ggplot(buoy, aes(WTMP_degC)) +
+  geom_bar()
+```
+
+#Join
+
+```{r}
+buoy <- buoy %>%
+  unite(date, c(YY_yr, MM_mo, DD_dy), sep = "-")
+
+bb_join <- benthic %>%
+  left_join(buoy, by = "date")
+
+head(bb_join) # kind of hard to see what's going on.
+## let's select a few columns and inspect:
+bb_join %>%
+  select(id_name, x, y, date, hh_hr, mm_mn, WTMP_degC) %>%
+  head()
+
+
+```
 
 
 
